--- a/package.json
+++ b/package.json
@@ -1,7 +1,33 @@
 {
+  "name": "confluence-to-markdown",
+  "version": "1.0.0",
+  "description": "Tool to convert Confluence HTML to Markdown",
+  "main": "index.js",
+  "bin": {
+    "confluence-to-markdown": "./index.js"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "jest",
+    "lint": "eslint ."
+  },
+  "keywords": [
+    "confluence",
+    "markdown",
+    "converter",
+    "html"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "jsdom": "^20.0.2",
-    "prettier": "^2.7.1",
-    "supervisor": "^0.12.0"
+    "jsdom": "^21.1.1",
+    "prettier": "^2.8.8"
+  },
+  "devDependencies": {
+    "eslint": "^8.40.0",
+    "jest": "^29.5.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
